--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,46 @@ body{
     font: normal normal normal 12px/1.5 Arial, Helvetica, sans-serif;
     width: 100vw;
     height: 100vh;
-    background-color: hsla(275, 73%, 64%, 0.236);
+}
+header{
+    background-color: hsl(181, 80%, 80%);
 }
 h2{
-    color: #00f;
+    color: #05F;
     font-size: 1.5em;
 
+}
+main{
+    float:left;
+    width: 65vw;
+    height: 40vh;
+    background-color: hsl(120, 80%, 80%);
+}
+aside{
+    float:right;
+    width: 29vw;
+    height: 40vh;
+    background-color: hsl(20, 80%, 80%);
+}
+footer{
+    clear: both;
+    color: #05F;
+    background-color: hsl(255, 80%, 80%);
+}
+.structural{
+    margin:10px;
+    padding: 10px;
+    border: 2px solid red;
+}
+#para1{
+    color:rgb(255, 100, 030);
+}
+#para2{
+    color:rgb(94, 63, 15);
+}
+a:hover{
+    color: #05F;
+}
+footer p{
+    font-size: .75em;
 }
